components/heptagon/test/bad/t1.ept
node f(x:int) returns (y:int)
let
  y = x;
  x = 0;
tel
